# NBA-Oracle

./: .env.example  .gitignore  LICENSE  NBA Prediction Systems and Public Sentiment Signals.md  PHASE1_RUNBOOK.md  README.md  config.py  ftw plan.md  implementation plan phase 1.md  main.py  problems plan.md  pyproject.toml  render.yaml  setup_auth.py  sitecustomize.py  start_hosted_stack.bat
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
data/fixtures/: phase1_sample_slate.json
data/live_sources/: phase2_sample_bundle.json
docs/plans/: ftw-plan.md  problems-plan.md
docs/runbooks/: deployment.md  phase-2.md  phase-3.md  phase-4.md  phase-4a.md  phase-4b.md  phase-6.md  recovery.md
docs/spec/: master-spec.md
docs/status/: changes-matrix.md  project-audit.md  project-status-matrix.md
nba_oracle/: __init__.py  auth.py  cli.py  config.py  env.py  http.py  live_reporting.py  market.py  models.py  predictor.py  replay.py  reporting.py  security.py  snapshots.py  source_scoring.py  teams.py
scripts/: nba_oracle_common.ps1  register_nba_oracle_scheduler.ps1  run_nba_oracle_scheduler.ps1  start_nba_oracle_backend.ps1  start_nba_oracle_tunnel.ps1
supabase/: phase2_schema.sql  phase3_2_schema.sql  phase3_schema.sql  phase4a_schema.sql
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase3_1.py  test_phase3_outcomes.py  test_phase4a_api.py  test_phase4a_auth.py  test_phase4a_notifications.py  test_phase4a_scheduler.py  test_phase4c.py  test_phase7a.py  test_phase7b.py
(+102 files in other folders)
