[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-oracle"
version = "0.1.0"
description = "NBA Oracle validation and live-slate backend."
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "nba_api>=1.11.4",
    "PyJWT>=2.10.1",
    "requests>=2.32.3",
    "supabase>=2.28.3",
    "uvicorn>=0.35.0",
]

[project.scripts]
nba-oracle = "nba_oracle.cli:main"
